# O3-Tension-Code

./: .gitignore  Makefile  README.md  README_reproduce.md  missing_still.md  pyproject.toml
CQG_PAPER/: dark_siren_cqg.tex  dark_siren_cqg_iopjournal.tex  iopart.cls
configs/: dark_siren_hier_variants_lean3.json  dark_siren_smoking_gun_specz_escalation_o3.json
docs/: ANCILLARY_TESTS.md  REVIEWER_CHECKLIST.md
paper_nature/: dark_siren_nature.tex  regenerate_figures.py
requirements/: README.md  seed_reproduce_full.in  seed_reproduce_full.lock.txt  seed_reproduce_lite.in  seed_reproduce_lite.lock.txt
scripts/: build_gwtc_pe_index.py  check_hero_waveform_prod_status.py  extract_gwtc_pe_dL_samples.py  fetch_gladeplus.py  fetch_gwtc_skymaps.py  fetch_strong_lens_real_catalogs.py  generate_fig5_dlresid.py  launch_dark_siren_hier_selection_uncertainty_single_nohup.sh  launch_dark_siren_high_value_suite_single_nohup.sh  launch_hubble_tension_bias_transfer_sweep_single_nohup.sh  launch_hubble_tension_mg_forecast_single_nohup.sh  launch_hubble_tension_mg_robustness_grid_single_nohup.sh  launch_joint_transfer_bias_fit_single_nohup.sh  reproduce_seed_pack.py  run_calib_sbc.py  run_dark_siren_catalog_injection_power_grid.py  run_dark_siren_catalog_injection_suite.py  run_dark_siren_catalog_injection_systematics_grid.py  run_dark_siren_control_battery.py  run_dark_siren_gap_test.py  run_dark_siren_hier_selection_uncertainty.py  run_dark_siren_smoking_gun_next_sprint.py  run_dark_siren_smoking_gun_nond_tests.py  run_hero_waveform_consistency_prod_matrix.py  run_realdata_recon.py  (+11 more)
(+129 files in other folders)
